--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -340,6 +340,16 @@
   "payment_methods.creditcard": "Creditcard",
   "payment_methods.giftcard": "Giftcard",
   "payment_methods.ideal": "iDEAL",
+  "payment_methods.paybybank": "PayByBank",
+  "payment_methods.sepadirectdebit": "SEPA Direct Debit",
+  "payment_methods.kbc": "KBC",
+  "payment_methods.in3": "In3",
+  "payment_methods.billink": "Billink",
+  "payment_methods.eps": "EPS",
+  "payment_methods.przelewy24": "Przelewy24",
+  "payment_methods.payperemail": "PayPerEmail",
+  "payment_methods.payconiq": "Payconiq",
+  "payment_methods.tinka": "Tinka",
   "payment_methods.paypal": "PayPal",
   "payment_methods.bancontact": "Bancontact",
   "payment_methods.sofort": "Sofort",
