--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -297,7 +297,7 @@
     "dashboard.pages.payments.payment_methods": "Payments methods",
     "dashboard.pages.payments.configure_your_payment_method_settings": "Configure your payment method settings",
     "dashboard.pages.settings.credentials_label": "Get your credentials from <a href='https://plaza.buckaroo.nl' target='_blank' class='text-secondary font-semibold'>Buckaroo Plaza</a>",
-    "dashboard.pages.settings.refunds_label_label": "When enabled you can do (partial) refunds directly from your BigCommerce admin area <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
+    "dashboard.pages.settings.refunds_label_label": "When enabled you can do (partial) refunds directly from your PrestaShop admin area <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
     "dashboard.pages.settings.refunds_label_explanation": "This label (text) is shown on the bank statement of the consumer <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
     "dashboard.pages.settings.settings": "Settings",
     "dashboard.pages.settings.settings_label": "Configure your settings",
@@ -313,8 +313,6 @@
     "dashboard.pages.settings.the_credentials_are_not_valid": "The credentials are not valid!",
     "dashboard.pages.settings.website_key": "Website key",
     "dashboard.pages.settings.secret_key": "Secret key",
-    "dashboard.pages.settings.discount_field": "Discount Field",
-    "dashboard.pages.settings.discount_field_label": "Display the discount field in the checkout.",
     "dashboard.pages.settings.transaction_description": "Transaction Description",
     "dashboard.pages.settings.transaction_description_label": "Transaction description can be filled with static text and tags like: <span class=\"text-green-600\">{order_number}</span> and <span class=\"text-green-600\">{shop_name}</span>.",
     "dashboard.pages.settings.example": "Example",
@@ -324,10 +322,10 @@
     "dashboard.pages.settings.refunds_label": "Refund label",
     "dashboard.pages.settings.return_url": "Return URL",
     "dashboard.pages.settings.return_url_label": "Set a custom return URL after the customer finishes the payment.",
-    "dashboard.pages.settings.return_url_explanation": "When this field is left empty, the customer will return to the default BigCommerce confirmation page.",
+    "dashboard.pages.settings.return_url_explanation": "When this field is left empty, the customer will return to the default PrestaShop confirmation page.",
     "dashboard.pages.settings.checkout_url": "Checkout URL",
     "dashboard.pages.settings.checkout_url_label": "Set a custom checkout URL after the customer cancel the payment or something went wrong during the process.",
-    "dashboard.pages.settings.checkout_url_explanation": "When this field is left empty, the customer will return to the default BigCommerce checkout page.",
+    "dashboard.pages.settings.checkout_url_explanation": "When this field is left empty, the customer will return to the default PrestaShop checkout page.",
     "dashboard.pages.settings.save": "Save",
     "dashboard.pages.settings.add": "Add",
     "dashboard.pages.settings.remove": "Remove",
@@ -336,7 +334,7 @@
     "dashboard.pages.settings.custom_scripts_placeholder": "Javascript / CSS (https://example.com/style.css)",
     "dashboard.pages.settings.settings_successfully_updated": "Settings successfully updated.",
     "dashboard.pages.settings.welcome_to_buckaroo": "Welcome to Buckaroo",
-    "dashboard.pages.settings.explanation_intro": "Welcome to the configuration panel of the Buckaroo Payment app for your BigCommerce webshop. In this panel you can set the app completely to your liking. Below you will find the steps to configue the settings. For further questions, please refer to our documentation.",
+    "dashboard.pages.settings.explanation_intro": "Welcome to the configuration panel of the Buckaroo Payment app for your PrestaShop webshop. In this panel you can set the app completely to your liking. Below you will find the steps to configue the settings. For further questions, please refer to our documentation.",
     "dashboard.pages.settings.step_one": "Fill in your <a href='https://plaza.buckaroo.nl/Configuration/Website/Index/' target='_blank' class='bg-primary inline-block rounded text-white p-1'>websitekey</a>",
     "dashboard.pages.settings.step_two": "Fill in your <a href='https://plaza.buckaroo.nl/Configuration/Merchant/SecretKey' target='_blank' class='bg-primary inline-block rounded text-white p-1'>secretkey</a>",
     "dashboard.pages.settings.step_three": "Click on ‘test connection’, when oke proceed to step 4.",
