--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -307,8 +307,6 @@
   "dashboard.pages.settings.the_credentials_are_not_valid": "De inloggegevens zijn onjuist!",
   "dashboard.pages.settings.website_key": "Website key",
   "dashboard.pages.settings.secret_key": "Secret key",
-  "dashboard.pages.settings.discount_field": "Kortingscode veld",
-  "dashboard.pages.settings.discount_field_label": "Toon het kortingscode veld bij het afrekenen.",
   "dashboard.pages.settings.transaction_description": "Transactie Beschrijving",
   "dashboard.pages.settings.transaction_description_label": "De transactiebeschrijving kan worden gevuld met een statische tekst en tags zoals: <span class=\"text-green-600\">{order_number}</span> en <span class=\"text-green-600\">{shop_name}</span>.",
   "dashboard.pages.settings.example": "Voorbeeld",
@@ -318,10 +316,10 @@
   "dashboard.pages.settings.refunds_label": "Terugbetaling omschrijving",
   "dashboard.pages.settings.return_url": "Return-URL",
   "dashboard.pages.settings.return_url_label": "Stel een aangepaste return-URL in nadat de klant de betaling heeft voltooid.",
-  "dashboard.pages.settings.return_url_explanation": "Wanneer dit veld leeg wordt gelaten, keert de klant terug naar de standaard BigCommerce bevestigingspagina.",
+  "dashboard.pages.settings.return_url_explanation": "Wanneer dit veld leeg wordt gelaten, keert de klant terug naar de standaard PrestaShop bevestigingspagina.",
   "dashboard.pages.settings.checkout_url": "Cancel-URL",
   "dashboard.pages.settings.checkout_url_label": "Stel een aangepaste cancel-URL in nadat de klant de betaling heeft geannuleerd of als er iets mis is gegaan tijdens het proces.",
-  "dashboard.pages.settings.checkout_url_explanation": "Wanneer dit veld leeg wordt gelaten, keert de klant terug naar de standaard BigCommerce afrekenpagina.",
+  "dashboard.pages.settings.checkout_url_explanation": "Wanneer dit veld leeg wordt gelaten, keert de klant terug naar de standaard PrestaShop afrekenpagina.",
   "dashboard.pages.settings.save": "Opslaan",
   "dashboard.pages.settings.add": "Toevoegen",
   "dashboard.pages.settings.remove": "Verwijder",
@@ -330,7 +328,7 @@
   "dashboard.pages.settings.custom_scripts_placeholder": "Javascript / CSS (https://example.com/style.css)",
   "dashboard.pages.settings.settings_successfully_updated": "Instellingen succesvol bijgewerkt.",
   "dashboard.pages.settings.welcome_to_buckaroo": "Welkom bij Buckaroo",
-  "dashboard.pages.settings.explanation_intro": "Welkom bij het configuratiescherm van de Buckaroo Payment app voor jouw BigCommerce webshop. In dit scherm kun je de app helemaal naar wens instellen. Hieronder vind je de stappen om de instellingen te configureren. Voor verdere vragen verwijzen wij je naar onze documentatie.",
+  "dashboard.pages.settings.explanation_intro": "Welkom bij het configuratiescherm van de Buckaroo Payment app voor jouw PrestaShop webshop. In dit scherm kun je de app helemaal naar wens instellen. Hieronder vind je de stappen om de instellingen te configureren. Voor verdere vragen verwijzen wij je naar onze documentatie.",
   "dashboard.pages.settings.step_three": "Klik op ‘test verbinding’, indien correct ga verder naar stap 4.",
   "dashboard.pages.settings.step_four": "Configureer de geavanceerde instellingen &amp; Betaalmethodes",
   "dashboard.pages.settings.step_five": "Begin met testen, als het testen goed gaat, kun je LIVE transacties starten",
