--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -300,6 +300,30 @@
     "dashboard.pages.payments.display_type_label": "This setting determines how the payment method is displayed in the checkout.",
     "dashboard.pages.payments.display_types.radio": "Radio",
     "dashboard.pages.payments.display_types.dropdown": "Dropdown",
+    "dashboard.pages.payments.send_email_instruction":"Send payment instruction email",
+    "dashboard.pages.payments.send_email_instruction_yes": "Yes",
+    "dashboard.pages.payments.send_email_instruction_no": "No",
+    "dashboard.pages.payments.send_email_merchant":"Merchant sends email",
+    "dashboard.pages.payments.due_date": "Due date (in days)",
+    "dashboard.pages.payments.allowed_methods": "Allowed payment methods",
+    "dashboard.pages.payments.vat_type_for_wrap": "Vat type for wrapping",
+    "dashboard.pages.payments.vat_type_for_wrap_select": "Please select  vat type for wrapping",
+    "dashboard.pages.payments.min_order_amount_b2b": "Minimum B2B order amount",
+    "dashboard.pages.payments.max_order_amount_b2c": "Maximum B2B order amount",
+    "dashboard.pages.payments.in3.version.label": "In3 version",
+    "dashboard.pages.payments.in3.version.v3": "V3 (V3)",
+    "dashboard.pages.payments.in3.version.v2": "V2 (Capayable/In2)",
+    "dashboard.pages.payments.customer.type_label": "Customer Type",
+    "dashboard.pages.payments.customer.type.both": "Both",
+    "dashboard.pages.payments.customer.type.b2c": "B2C",
+    "dashboard.pages.payments.customer.type.b2c.long": "Business-to-consumer",
+    "dashboard.pages.payments.customer.type.b2b": "B2B",
+    "dashboard.pages.payments.customer.type.b2b.long": "Business-to-Business",
+    "dashboard.pages.payments.logo": "Payment logo",
+    "dashboard.pages.payments.seller_protection": "Seller protection",
+    "dashboard.pages.payments.seller_protection_enable": "Enable PayPal Seller Protection",
+    "dashboard.pages.payments.seller_protection_enabled": "Yes",
+    "dashboard.pages.payments.seller_protection_disabled": "No",
     "dashboard.pages.settings.credentials_label": "Get your credentials from the <a href='https://plaza.buckaroo.nl' target='_blank' class='text-secondary font-semibold'>Buckaroo Plaza</a>",
     "dashboard.pages.settings.refunds_label_label": "When enabled you can do (partial) refunds directly from your PrestaShop admin area <a href='#' target='_blank' class='text-secondary font-semibold'>Read more</a>",
     "dashboard.pages.settings.refunds_label_explanation": "This description is used for the refunds and will be visible in Buckaroo and on the bank statement of the consumer. We recommend using the webshop name for recognition.",
