add Idin as Verification method

--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -236,6 +236,7 @@
     "dashboard.menu.channel": "Channel",
     "dashboard.menu.settings": "Settings",
     "dashboard.menu.payment_methods": "Payment methods",
+    "dashboard.menu.verification_methods": "Verification methods",
     "dashboard.menu.order_payment_methods": "Order Payments Methods",
     "dashboard.pages.order_payment_methods.if_you_have_any_questions": "If you have any questions about the above, you can contact us by email:",
     "dashboard.pages.order_payment_methods.if_you_have_any_questions_link": " or by telephone on ",
@@ -252,6 +253,7 @@
     "dashboard.pages.order_payment_methods.step_three": "Save your chosen payment methods order and check if the payment methods are showed in the correct order in the checkout of your webshop.",
     "dashboard.pages.payments.service_code_label": "After you request your custom giftcard by Intersolve you will receive an email about your service code. If you have any questions about this do not hesitate to mail us at ",
     "dashboard.pages.payments.configure_your_payment_name_settings": "Configure your {payment_name} settings",
+    "dashboard.pages.payments.configure_your_verification_name_settings": "Configure your {verification_name} settings",
     "dashboard.pages.payments.modes_settings.live": "Live",
     "dashboard.pages.payments.modes_settings.test": "Test",
     "dashboard.pages.payments.modes_settings.off": "Off",
@@ -295,7 +297,9 @@
     "dashboard.pages.payments.service_code": "Service Code",
     "dashboard.pages.payments.custom_icon_url": "Custom Icon URL",
     "dashboard.pages.payments.payment_methods": "Payments methods",
+    "dashboard.pages.payments.verification_methods": "Verifications methods",
     "dashboard.pages.payments.configure_your_payment_method_settings": "Configure your payment method settings",
+    "dashboard.pages.payments.configure_your_verification_method_settings": "Configure your verification method settings",
     "dashboard.pages.payments.customer_type": "Customer type",
     "dashboard.pages.payments.display_type": "Button Display Type",
     "dashboard.pages.payments.display_type_label": "This setting determines how the bank selection for this payment method will be displayed in the checkout.<br />You can choose between radio buttons or a dropdown selection.",
@@ -307,8 +311,8 @@
     "dashboard.pages.payments.send_email_merchant":"Merchant sends email",
     "dashboard.pages.payments.due_date": "Due date (in days)",
     "dashboard.pages.payments.allowed_methods": "Allowed payment methods",
-    "dashboard.pages.payments.vat_type_for_wrap": "Vat type for wrapping",
-    "dashboard.pages.payments.vat_type_for_wrap_select": "Please select  vat type for wrapping",
+    "dashboard.pages.payments.vat_type_for_wrap": "Vat type for gift wrapping",
+    "dashboard.pages.payments.vat_type_for_wrap_select": "Please select  vat type for gift wrapping",
     "dashboard.pages.payments.min_order_amount_b2b": "Minimum B2B order amount",
     "dashboard.pages.payments.max_order_amount_b2c": "Maximum B2B order amount",
     "dashboard.pages.payments.in3.version.label": "In3 version",
@@ -397,5 +401,6 @@
     "payment_methods.belfius": "Belfius",
     "payment_methods.transfer": "Transfer",
     "payment_methods.wechatpay": "WeChatPay",
-    "payment_methods.alipay": "Alipay"
+    "payment_methods.alipay": "Alipay",
+    "verification_methods.idin": "iDin"
 }
