--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -1,5 +1,5 @@
 {
-  "buckaroo.response.invalid_parameter_originaltransaction": "Invalid parameter originaltransaction.",
+  "buckaroo.response.invalid_parameter_originaltransaction": "Ongeldige parameter originaltransaction.",
   "buckaroo.response.an_error_occurred_while_processing_the_transaction_unable_to_pay_more_with_giftcards": "Er is een fout opgetreden tijdens het verwerken van de transactie: Je kunt niet meer cadeaukaarten gebruiken",
   "countries.afghanistan": "Afghanistan",
   "countries.albania": "Albanië",
@@ -19,14 +19,14 @@
   "countries.bahrain": "Bahrein",
   "countries.bangladesh": "Bangladesh",
   "countries.barbados": "Barbados",
-  "countries.belarus": "Wit -Rusland",
+  "countries.belarus": "Wit-Rusland",
   "countries.belgium": "België",
   "countries.belize": "Belize",
   "countries.benin": "Benin",
   "countries.bermuda": "Bermuda",
   "countries.bhutan": "Bhutan",
   "countries.bolivia": "Bolivia",
-  "countries.bosnia_and_herzegovina": "Bosnië-Herzegovina",
+  "countries.bosnia_and_herzegovina": "Bosnië en Herzegovina",
   "countries.botswana": "Botswana",
   "countries.brazil": "Brazilië",
   "countries.brunei_darussalam": "Brunei Darussalam",
@@ -37,21 +37,21 @@
   "countries.cameroon": "Kameroen",
   "countries.canada": "Canada",
   "countries.cape_verde": "Kaapverdië",
-  "countries.cayman_islands": "Kaaiman Eilanden",
-  "countries.central_african_republic": "Centraal Afrikaanse Republiek",
+  "countries.cayman_islands": "Kaaimaneilanden",
+  "countries.central_african_republic": "Centraal-Afrikaanse Republiek",
   "countries.chad": "Tsjaad",
   "countries.chile": "Chili",
   "countries.china": "China",
   "countries.colombia": "Colombia",
-  "countries.comoros": "Comoros",
-  "countries.republic_of_the_congo": "Republiek van de Congo",
+  "countries.comoros": "Comoren",
+  "countries.republic_of_the_congo": "Republiek Congo",
   "countries.democratic_republic_of_the_congo": "Democratische Republiek Congo",
-  "countries.cook_islands": "Kook eilanden",
+  "countries.cook_islands": "Cookeilanden",
   "countries.costa_rica": "Costa Rica",
   "countries.côte_d'ivoire": "Ivoorkust",
   "countries.croatia": "Kroatië",
   "countries.cuba": "Cuba",
-  "countries.curaçao": "Curacao",
+  "countries.curaçao": "Curaçao",
   "countries.cyprus": "Cyprus",
   "countries.czech_republic": "Tsjechische Republiek",
   "countries.denmark": "Denemarken",
@@ -65,8 +65,8 @@
   "countries.eritrea": "Eritrea",
   "countries.estonia": "Estland",
   "countries.ethiopia": "Ethiopië",
-  "countries.falkland_island": "Falkland Island",
-  "countries.faroe_islands": "Faarseilanden",
+  "countries.falkland_island": "Falklandeiland",
+  "countries.faroe_islands": "Faeröer Eilanden",
   "countries.fiji": "Fiji",
   "countries.finland": "Finland",
   "countries.france": "Frankrijk",
@@ -83,12 +83,12 @@
   "countries.guam": "Guam",
   "countries.guatemala": "Guatemala",
   "countries.guernsey": "Guernsey",
-  "countries.guinea": "Guinea",
+  "countries.guinea": "Guinee",
   "countries.guinea-bissau": "Guinee-Bissau",
   "countries.guyana": "Guyana",
   "countries.haiti": "Haïti",
   "countries.honduras": "Honduras",
-  "countries.hong_kong": "Hong Kong",
+  "countries.hong_kong": "Hongkong",
   "countries.hungary": "Hongarije",
   "countries.iceland": "IJsland",
   "countries.india": "India",
@@ -96,7 +96,7 @@
   "countries.iran": "Iran",
   "countries.iraq": "Irak",
   "countries.ireland": "Ierland",
-  "countries.isle_of_man": "Isle of Man",
+  "countries.isle_of_man": "Man",
   "countries.israel": "Israël",
   "countries.italy": "Italië",
   "countries.jamaica": "Jamaica",
@@ -106,11 +106,11 @@
   "countries.kazakhstan": "Kazachstan",
   "countries.kenya": "Kenia",
   "countries.kiribati": "Kiribati",
-  "countries.north_korea": "Noord Korea",
+  "countries.north_korea": "Noord-Korea",
   "countries.south_korea": "Zuid-Korea",
   "countries.kosovo": "Kosovo",
   "countries.kuwait": "Koeweit",
-  "countries.kyrgyzstan": "Kirgizisch",
+  "countries.kyrgyzstan": "Kirgizië",
   "countries.laos": "Laos",
   "countries.latvia": "Letland",
   "countries.lebanon": "Libanon",
@@ -122,13 +122,13 @@
   "countries.luxembourg": "Luxemburg",
   "countries.macau": "Macau",
   "countries.macedonia": "Macedonië",
-  "countries.madagascar": "Madagascar",
+  "countries.madagascar": "Madagaskar",
   "countries.malawi": "Malawi",
   "countries.malaysia": "Maleisië",
   "countries.maldives": "Maldiven",
   "countries.mali": "Mali",
   "countries.malta": "Malta",
-  "countries.marshall_islands": "Marshall eilanden",
+  "countries.marshall_islands": "Marshalleilanden",
   "countries.mauritania": "Mauritanië",
   "countries.mauritius": "Mauritius",
   "countries.mayotte": "Mayotte",
@@ -152,8 +152,8 @@
   "countries.niger": "Niger",
   "countries.nigeria": "Nigeria",
   "countries.niue": "Niue",
-  "countries.norfolk_island": "Norfolk Island",
-  "countries.northern_mariana_islands": "noordelijke Mariana eilanden",
+  "countries.norfolk_island": "Norfolkeiland",
+  "countries.northern_mariana_islands": "Noordelijke Marianen",
   "countries.norway": "Noorwegen",
   "countries.oman": "Oman",
   "countries.pakistan": "Pakistan",
@@ -163,7 +163,7 @@
   "countries.papua_new_guinea": "Papoea-Nieuw-Guinea",
   "countries.paraguay": "Paraguay",
   "countries.peru": "Peru",
-  "countries.philippines": "Filippijnen",
+  "countries.philippines": "Filipijnen",
   "countries.pitcairn": "Pitcairn",
   "countries.poland": "Polen",
   "countries.portugal": "Portugal",
@@ -172,46 +172,46 @@
   "countries.romania": "Roemenië",
   "countries.russia": "Rusland",
   "countries.rwanda": "Rwanda",
-  "countries.saint_helena": "Sint -Helena",
+  "countries.saint_helena": "Sint-Helena",
   "countries.saint_kitts_and_nevis": "Saint Kitts en Nevis",
   "countries.saint_lucia": "Saint Lucia",
   "countries.saint_vincent_and_the_grenadines": "Saint Vincent en de Grenadines",
   "countries.samoa": "Samoa",
   "countries.san_marino": "San Marino",
-  "countries.sao_tome_and_principe": "Sao Tome en Principe",
+  "countries.são_tomé_and_príncipe": "Sao Tomé en Principe",
   "countries.saudi_arabia": "Saoedi-Arabië",
   "countries.senegal": "Senegal",
   "countries.serbia": "Servië",
   "countries.seychelles": "Seychellen",
   "countries.sierra_leone": "Sierra Leone",
   "countries.singapore": "Singapore",
+  "countries.sint_maarten": "Sint-Maarten",
   "countries.slovakia": "Slowakije",
   "countries.slovenia": "Slovenië",
-  "countries.solomon_islands": "Solomon eilanden",
+  "countries.solomon_islands": "Salomonseilanden",
   "countries.somalia": "Somalië",
   "countries.south_africa": "Zuid-Afrika",
-  "countries.south_sudan": "Zuid Soedan",
+  "countries.south_sudan": "Zuid-Soedan",
   "countries.spain": "Spanje",
   "countries.sri_lanka": "Sri Lanka",
   "countries.sudan": "Soedan",
-  "countries.suriname": "Surinaam",
+  "countries.suriname": "Suriname",
   "countries.swaziland": "Swaziland",
   "countries.sweden": "Zweden",
   "countries.switzerland": "Zwitserland",
-  "countries.syrian_arab_republic": "Syrische Arabische Republiek",
+  "countries.syria": "Syrië",
   "countries.taiwan": "Taiwan",
   "countries.tajikistan": "Tadzjikistan",
   "countries.tanzania": "Tanzania",
   "countries.thailand": "Thailand",
-  "countries.east_timor": "Oost Timor",
-  "countries.togo": "Gaan",
-  "countries.tokelau": "Tokelau",
+  "countries.timor-leste": "Oost-Timor",
+  "countries.togo": "Togo",
   "countries.tonga": "Tonga",
   "countries.trinidad_and_tobago": "Trinidad en Tobago",
   "countries.tunisia": "Tunesië",
-  "countries.turkey": "Kalkoen",
+  "countries.turkey": "Turkije",
   "countries.turkmenistan": "Turkmenistan",
-  "countries.turks_and_caicos_islands": "Turken en Caicos -eilanden",
+  "countries.turks_and_caicos_islands": "Turks- en Caicoseilanden",
   "countries.tuvalu": "Tuvalu",
   "countries.uganda": "Oeganda",
   "countries.ukraine": "Oekraïne",
@@ -221,6 +221,7 @@
   "countries.uruguay": "Uruguay",
   "countries.uzbekistan": "Oezbekistan",
   "countries.vanuatu": "Vanuatu",
+  "countries.vatican_city": "Vaticaanstad",
   "countries.venezuela": "Venezuela",
   "countries.vietnam": "Vietnam",
   "countries.british_virgin_islands": "Britse Maagdeneilanden",
@@ -236,6 +237,7 @@
   "dashboard.menu.channel": "Kanaal",
   "dashboard.menu.settings": "Instellingen",
   "dashboard.menu.payment_methods": "Betaalmethoden",
+  "dashboard.menu.verification_methods": "Verificatiemethoden",
   "dashboard.menu.order_payment_methods": "Betaalmethoden Volgorde",
   "dashboard.pages.order_payment_methods.order_payment_methods": "Betaalmethode volgorde",
   "dashboard.pages.order_payment_methods.order_payment_methods_label": "Wijzig de volgorde van betaalmethoden",
@@ -249,6 +251,7 @@
   "dashboard.pages.order_payment_methods.step_two": "Sleep de betaalmethoden in de volgorde van je voorkeur.",
   "dashboard.pages.order_payment_methods.step_three": "Sla op en controleer in je webshop (checkout) of alles correct is.",
   "dashboard.pages.payments.configure_your_payment_name_settings": "Configureer je instellingen voor {payment_name}",
+  "dashboard.pages.payments.configure_your_verification_name_settings": "Configureer je instellingen voor {verification_name}",
   "dashboard.pages.payments.modes_settings.live": "Live",
   "dashboard.pages.payments.modes_settings.test": "Test",
   "dashboard.pages.payments.modes_settings.off": "Uit",
@@ -292,36 +295,38 @@
   "dashboard.pages.payments.service_code": "Service Code",
   "dashboard.pages.payments.custom_icon_url": "Aangepaste cadeaukaart logo URL",
   "dashboard.pages.payments.payment_methods": "Betalingsmethoden",
+  "dashboard.pages.payments.verification_methods": "Betalingsmethoden",
   "dashboard.pages.payments.configure_your_payment_method_settings": "Configureer uw betalingsmethode-instellingen",
+  "dashboard.pages.payments.configure_your_verification_method_settings": "Configureer uw instellingen voor de verificatiemethode",
   "dashboard.pages.payments.customer_type": "Klant type",
   "dashboard.pages.payments.display_type": "Weergavetype",
   "dashboard.pages.payments.display_type_label": "Deze instelling bepaalt hoe de bankselectie voor deze betaalmethode wordt weergegeven bij het afrekenen.<br />Je kunt kiezen tussen keuzerondjes of een vervolgkeuzelijst.",
   "dashboard.pages.payments.display_types.radio": "Radio",
   "dashboard.pages.payments.display_types.dropdown": "Laten vallen",
-  "dashboard.pages.payments.send_email_instruction":"Send payment instruction email",
-  "dashboard.pages.payments.send_email_instruction_yes": "Yes",
-  "dashboard.pages.payments.send_email_instruction_no": "No",
-  "dashboard.pages.payments.send_email_merchant":"Merchant sends email",
-  "dashboard.pages.payments.due_date": "Due date (in days)",
-  "dashboard.pages.payments.allowed_methods": "Allowed payment methods",
-  "dashboard.pages.payments.vat_type_for_wrap": "Vat type for wrapping",
-  "dashboard.pages.payments.vat_type_for_wrap_select": "Please select  vat type for wrapping",
-  "dashboard.pages.payments.min_order_amount_b2b": "Minimum B2B order amount",
-  "dashboard.pages.payments.max_order_amount_b2c": "Maximum B2B order amount",
-  "dashboard.pages.payments.in3.version.label": "In3 version",
+  "dashboard.pages.payments.send_email_instruction": "Stuur betalingsinstructie e-mail",
+  "dashboard.pages.payments.send_email_instruction_yes": "Ja",
+  "dashboard.pages.payments.send_email_instruction_no": "Nee",
+  "dashboard.pages.payments.send_email_merchant": "Merchant stuurt e-mail",
+  "dashboard.pages.payments.due_date": "Vervaldatum (in dagen)",
+  "dashboard.pages.payments.allowed_methods": "Toegestane betaalmethoden",
+  "dashboard.pages.payments.vat_type_for_wrap": "BTW-type voor cadeauverpakking",
+  "dashboard.pages.payments.vat_type_for_wrap_select": "Selecteer BTW-type voor cadeauverpakking",
+  "dashboard.pages.payments.min_order_amount_b2b": "Minimale B2B bestelbedrag",
+  "dashboard.pages.payments.max_order_amount_b2c": "Maximale B2B bestelbedrag",
+  "dashboard.pages.payments.in3.version.label": "In3 versie",
   "dashboard.pages.payments.in3.version.v3": "V3 (V3)",
   "dashboard.pages.payments.in3.version.v2": "V2 (Capayable/In2)",
-  "dashboard.pages.payments.customer.type_label": "Customer Type",
-  "dashboard.pages.payments.customer.type.both": "Both",
+  "dashboard.pages.payments.customer.type_label": "Klanttype",
+  "dashboard.pages.payments.customer.type.both": "Beide",
   "dashboard.pages.payments.customer.type.b2c": "B2C",
   "dashboard.pages.payments.customer.type.b2c.long": "Business-to-consumer",
   "dashboard.pages.payments.customer.type.b2b": "B2B",
   "dashboard.pages.payments.customer.type.b2b.long": "Business-to-Business",
-  "dashboard.pages.payments.logo": "Payment logo",
-  "dashboard.pages.payments.seller_protection": "Seller protection",
-  "dashboard.pages.payments.seller_protection_enable": "Enable PayPal Seller Protection",
-  "dashboard.pages.payments.seller_protection_enabled": "Yes",
-  "dashboard.pages.payments.seller_protection_disabled": "No",
+  "dashboard.pages.payments.logo": "Betaalmethode logo",
+  "dashboard.pages.payments.seller_protection": "Verkopersbescherming",
+  "dashboard.pages.payments.seller_protection_enable": "Schakel de PayPal Verkopersbescherming in",
+  "dashboard.pages.payments.seller_protection_enabled": "Ja",
+  "dashboard.pages.payments.seller_protection_disabled": "Nee",
   "dashboard.pages.settings.settings": "Instellingen",
   "dashboard.pages.settings.settings_label": "Configureer je instellingen",
   "dashboard.pages.settings.mode": "Modus",
@@ -340,7 +345,7 @@
   "dashboard.pages.settings.transaction_description_label": "De transactiebeschrijving kan worden gevuld met een statische tekst en tags zoals: <span class=\"text-green-600\">{order_number}</span> en <span class=\"text-green-600\">{shop_name}</span>.",
   "dashboard.pages.settings.example": "Voorbeeld",
   "dashboard.pages.settings.order_number": "Bestellingsnummer",
-  "dashboard.pages.settings.shop_name": "Shop naam",
+  "dashboard.pages.settings.shop_name": "Winkelnaam",
   "dashboard.pages.settings.refunds": "Terugbetalingen",
   "dashboard.pages.settings.refunds_label": "Terugbetaling omschrijving",
   "dashboard.pages.settings.return_url": "Return-URL",
@@ -386,5 +391,6 @@
   "payment_methods.trustly": "Trustly",
   "payment_methods.transfer": "Transfer",
   "payment_methods.wechatpay": "WeChatPay",
-  "payment_methods.alipay": "Alipay"
+  "payment_methods.alipay": "Alipay",
+  "verification_methods.idin": "iDin"
 }
