translation for verification page

--- a/dev/lang/php_en.json
+++ b/dev/lang/php_en.json
@@ -377,6 +377,14 @@
     "dashboard.pages.settings.if_you_have_any_questions_link": " or phone ",
     "dashboard.pages.settings.advance_settings": "Advanced Settings",
     "dashboard.pages.settings.hide_advance_settings": "Hide Advanced Settings",
+    "dashboard.pages.settings.re_stock_products": "Re-stock Products",
+    "dashboard.pages.settings.re_stock_products_label": "Whether refunded products should be returned to inventory (increasing the quantity in stock).",
+    "dashboard.pages.settings.generate_credit_slip": "Generate a Credit Slip",
+    "dashboard.pages.settings.generate_credit_slip_label": "Whether a credit note should be generated.",
+    "dashboard.pages.settings.generate_voucher": "Generate a Voucher",
+    "dashboard.pages.settings.generate_voucher_label": "Whether a voucher should be generated.",
+    "dashboard.pages.settings.generate_negative_payments": "Create Negative Payments on Refund",
+    "dashboard.pages.settings.generate_negative_payments_label": "Whether a negative payment does also need to be created when performing a refund.",
     "payment_methods.applepay": "Apple Pay",
     "payment_methods.creditcard": "Cards",
     "payment_methods.giftcard": "Giftcard",
