--- a/dev/lang/php_nl.json
+++ b/dev/lang/php_nl.json
@@ -368,6 +368,14 @@
   "dashboard.pages.settings.step_five": "Begin met testen, als het testen goed gaat, kun je LIVE transacties starten",
   "dashboard.pages.settings.advance_settings": "Geavanceerde Instellingen",
   "dashboard.pages.settings.hide_advance_settings": "Geavanceerde Instellingen Verbergen",
+  "dashboard.pages.settings.re_stock_products": "Voorraad aanvullen bij retourproducten",
+  "dashboard.pages.settings.re_stock_products_label": "Of terugbetaalde producten moeten worden teruggeplaatst in de voorraad (waardoor de voorraadhoeveelheid wordt verhoogd).",
+  "dashboard.pages.settings.generate_credit_slip": "Een creditnota genereren",
+  "dashboard.pages.settings.generate_credit_slip_label": "Of er een creditnota moet worden gegenereerd.",
+  "dashboard.pages.settings.generate_voucher": "Een voucher genereren",
+  "dashboard.pages.settings.generate_voucher_label": "Of er een voucher moet worden gegenereerd.",
+  "dashboard.pages.settings.generate_negative_payments": "Een negatieve betaling bij terugbetalingen aanmaken",
+  "dashboard.pages.settings.generate_negative_payments_label": "Of er ook een negatieve betaling moet worden gecreëerd bij het uitvoeren van een terugbetaling.",
   "payment_methods.applepay": "Apple Pay",
   "payment_methods.creditcard": "Creditcard",
   "payment_methods.giftcard": "Giftcard",
